GNOME Bugzilla – Bug 758668
controlsource: fix GetValue and GetValueArray documentation
Last modified: 2016-01-08 18:37:02 UTC
GstControlSourceGetValue() function documentation doesn't match prototype. GstControlSourceGetValueArray documentation, as a member of GstControlSource structure, doesn't return or fill a GstValueArray.
Created attachment 316256 [details] [review] controlsource: fix GetValue and GetValueArray documentation
Thanks for the patch! commit 6b718776928395432d88e48df4b985724228d925 Author: Aurélien Zanelli <aurelien.zanelli@parrot.com> Date: Wed Nov 25 17:36:25 2015 +0100 controlsource: fix GetValue and GetValueArray documentation GstControlSourceGetValue() value paramater is a gdouble, not a GValue and GstControlSourceGetValueArray doesn't return a GstValueArray but an array of double. https://bugzilla.gnome.org/show_bug.cgi?id=758668